--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <main>
             <section class="chamada container">
                 <h1 class="chamada__titulo">Aplicativos Na Medida para você</h1>
-                <p class="chamada__texto">Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.
+                <p class="chamada__texto">Apeperia tem um jeito inovador e moderno de comparar e montar aplicativos para pequenas e médias empresas.
                 </p>
                 <a class="chamada__botao botao" href="#">Conheça os planos</a>
             </section>
